# TerminalDB

./: README.md  db.py  display.py  gemini.py  llm.py  pyproject.toml  requirements.txt  start-mlx.sh  tdb.py  tdb.sqlite  web_server.py
terminaldb/: __init__.py  cli.py  db.py  display.py  llm.py
terminaldb/shell/: tdb.bash  tdb.zsh
terminaldb/web/: server.py
terminaldb/web/static/: app.js  style.css
terminaldb/web/templates/: index.html
