[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminaldb"
version = "0.1.0"
description = "AI-powered terminal command history with semantic search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "flask>=3",
]

[project.scripts]
tdb = "terminaldb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["terminaldb*"]

[tool.setuptools.package-data]
"terminaldb.web" = ["static/*", "templates/*"]
"terminaldb" = ["shell/*"]
